--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,8 @@ Header set Access-Control-Allow-Credentials "true"
 #Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, PATCH, DELETE
 #Access-Control-Allow-Headers: 'X-Requested-With,content-type'
 #Access-Control-Allow-Credentials: true
+
+<Files ~ "\.(php|json)$">
+Header add Pragma "no-cache"
+Header set Cache-Control no-cache
+</Files>
